# inno_ogtc_nn

./: .gitignore  CMakeLists.txt  DatasetModule.cpp  DatasetModule.h  Net.h  NetProcessing.cpp  NetProcessing.h  README.md  gen_dataset.cpp  gen_datasets.cpp  main.cpp  set.csv  test.cpp  train.cpp  train.csv  val.csv
datasets/: val.csv
include/: DatasetModule.h  Net.h  NetProcessing.h
src/: DatasetModule.cpp  NetProcessing.cpp  gen_datasets.cpp  test.cpp  train.cpp
visualization/: test.py  visualize_data.py  visualize_loss.py
